--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Guest" asp-controller="CustomerRegister" asp-action="Register">Customer Register</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TestCar" asp-action="Index">Test</a>
+                        </li>
                     </ul>
 
                     <!-- Right side buttons -->
