--- a/CarRental/Views/TestCar/Index.cshtml
+++ b/CarRental/Views/TestCar/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Test Car Page";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Use the main layout
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
 
 
