--- a/CarRental/Views/AdminUser/AddCustomer.cshtml
+++ b/CarRental/Views/AdminUser/AddCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarRental.ViewModels.CustomerViewModel
+﻿@* @model CarRental.ViewModels.CustomerViewModel
 
 @{
     // Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -46,4 +46,4 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+} *@
