Car add complete

--- a/CarRental/Views/AdminCar/Index.cshtml
+++ b/CarRental/Views/AdminCar/Index.cshtml
@@ -9,7 +9,7 @@
         <h2 class="fw-bold text-dark">
             <i class="bi bi-car-front-fill text-primary me-2"></i> Manage Cars
         </h2>
-        <a asp-area="Admin" asp-controller="Car" asp-action="AddCar" class="btn btn-success btn-lg">
+        <a asp-area="" asp-controller="AdminCar" asp-action="AddCar" class="btn btn-success btn-lg">
             <i class="bi bi-plus-circle me-1"></i> Add New Car
         </a>
     </div>
