--- a/CarRental/Views/AdminCar/AddCar.cshtml
+++ b/CarRental/Views/AdminCar/AddCar.cshtml
@@ -53,9 +53,9 @@
                     </div>
 
                     <div class="col-md-6 mb-3">
-                        <label asp-for="PricePerDay" class="form-label fw-bold">Price Per Day ($)</label>
-                        <input asp-for="PricePerDay" class="form-control" type="number" placeholder="e.g. 50" />
-                        <span asp-validation-for="PricePerDay" class="text-danger"></span>
+                        <label asp-for="PricePerday" class="form-label fw-bold">Price Per Day ($)</label>
+                        <input asp-for="PricePerday" class="form-control" type="number" placeholder="e.g. 50" />
+                        <span asp-validation-for="PricePerday" class="text-danger"></span>
                     </div>
 
                     <div class="col-md-12 mb-3">
@@ -65,19 +65,6 @@
                     </div>
 
 
-                    @* <!-- Price -->
-                    <div class="col-md-6 mb-3">
-                        <label asp-for="PricePerday" class="form-label fw-bold">Price Per Day ($)</label>
-                        <input asp-for="PricePerday" class="form-control" type="number" placeholder="e.g. 50" />
-                        <span asp-validation-for="PricePerday" class="text-danger"></span>
-                    </div>
-
-                    <!-- Car Image -->
-                    <div class="col-md-12 mb-3">
-                        <label asp-for="ImageUrl" class="form-label fw-bold">Car Image</label>
-                        <input type="file" name="files" id="addcarimg" class="form-control" accept="image/*" />
-                        <span asp-validation-for="ImageUrl" class="text-danger"></span>
-                    </div> *@
 
                     @* <!-- Availability Switch -->
                     <div class="col-md-12 mb-3">
@@ -95,8 +82,8 @@
                     <button type="submit" class="btn btn-success btn-lg">
                         <i class="bi bi-save2 me-1"></i> Save Car
                     </button>
-                    <a asp-controller="Car" asp-action="Index" class="btn btn-outline-secondary btn-lg">
-                        <i class="bi bi-arrow-left me-1"></i> Cancel
+                    <a asp-controller="AdminCar" asp-action="Index" class="btn btn-outline-secondary btn-lg">
+                         <i class="bi bi-arrow-left me-1"></i > Cancel
                     </a>
                 </div>
             </form>
