--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     <!-- Right side buttons -->
                     <div class="d-flex">
                         <a asp-area="" asp-controller="Login" asp-action="Index" class="btn btn-outline-primary me-2">Login</a>
-                        <a asp-area="Guest" asp-controller="CustomerRegister" asp-action="Register" class="btn btn-primary">Register</a>
+                        <a asp-area="" asp-controller="Customer" asp-action="CustomerRegister" class="btn btn-primary">Register</a>
                     </div>
                 </div>
             </div>
