--- a/CarRental/Views/Shared/_CustomerLayout.cshtml
+++ b/CarRental/Views/Shared/_CustomerLayout.cshtml
@@ -25,13 +25,16 @@
                     <!-- Left menu items -->
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Customer" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerDashboard" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Customer" asp-action="CarList">Car List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerDashboard" asp-action="BookCar">Car List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Customer" asp-action="AddCustomer">Add Customer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerDashboard" asp-action="AvailableCars">Add Customer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerDashboard" asp-action="MyBookings">Add Customer</a>
                         </li>
                     </ul>
 
