--- a/CarRental/Views/CustomerDashboard/BookCar.cshtml
+++ b/CarRental/Views/CustomerDashboard/BookCar.cshtml
@@ -8,18 +8,17 @@
 
 <form asp-action="BookCar" method="post">
     <input type="hidden" asp-for="CarId" value="@Model.CarId" />
-    <input type="hidden" name="customerId" value="@User.FindFirst("CustomerId")?.Value" />
 
-    <div class="form-group">
+    <div class="form-group mb-3">
         <label>Pickup Date</label>
         <input type="date" name="pickupDate" class="form-control" required />
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-3">
         <label>Return Date</label>
         <input type="date" name="returnDate" class="form-control" required />
     </div>
 
-    <button type="submit" class="btn btn-success mt-2">Confirm Booking</button>
-    <a asp-action="AvailableCars" class="btn btn-secondary mt-2">Cancel</a>
+    <button type="submit" class="btn btn-success">Confirm Booking</button>
+    <a asp-action="AvailableCars" class="btn btn-secondary">Cancel</a>
 </form>
