--- a/CarRental/Views/AdminUser/Index.cshtml
+++ b/CarRental/Views/AdminUser/Index.cshtml
@@ -1,11 +1,5 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>@ViewBag.Title</title>
-</head>
-<body>
-    <nav>Admin Menu</nav>
-    <div class="container">
-    </div>
-</body>
-</html>
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
